--- a/src/screens/usuarios/css/Gestion_Usuarios.module.css
+++ b/src/screens/usuarios/css/Gestion_Usuarios.module.css
@@ -54,13 +54,13 @@
     gap: 5px;
 }
 
-.filtros .buscar form input {
+.filtros .buscar input {
     padding: 2px;
     border-radius: 5px;
     border: 1px solid gray;
 }
 
-.filtros .buscar form button {
+.filtros .buscar  button {
     background-color: transparent;
     border: none;
     outline: none;
@@ -78,7 +78,7 @@
     background-color: transparent;
 }
 
-.filtroCard form select {
+.filtroCard select {
     border: none;
 }
 
