--- a/src/components/css/Buscador.module.css
+++ b/src/components/css/Buscador.module.css
@@ -4,12 +4,12 @@
     top: 25px;
     z-index: 1;
     left: 25px;
+    z-index: 2;
 }
 
 .distribucionContainer {
     background-color: white;
-    padding: 10px;
-
+    padding: 20px;
     display: flex;
     justify-content: space-around;
     align-items: center;
