--- a/src/screens/solicitudes/List.module.css
+++ b/src/screens/solicitudes/List.module.css
@@ -29,6 +29,7 @@
     justify-content: left;
     flex-direction: column;
     margin-bottom: 25px;
+    align-items: center;
 }
 
 .filtros .buscar {
@@ -68,6 +69,7 @@
 .filtroCard  select {
     border: none;
     outline: none;
+    background-color: transparent;
 }
 
 .filtroCard:hover {
