--- a/src/screens/marcadores/css/List.module.css
+++ b/src/screens/marcadores/css/List.module.css
@@ -30,6 +30,7 @@ button{cursor: pointer;}
     justify-content: left;
     flex-direction: column;
     margin-bottom: 25px;
+    align-items: center;  /*Agregado por Mati*/
 }
 
 .add_user button {
@@ -82,6 +83,7 @@ button{cursor: pointer;}
 
 .filtroCard select {
     border: none;
+    background-color: transparent; 
 }
 
 .filtroCard:hover {
