--- a/src/screens/usuarios/css/Gestion_Usuarios.module.css
+++ b/src/screens/usuarios/css/Gestion_Usuarios.module.css
@@ -29,6 +29,7 @@
     justify-content: left;
     flex-direction: column;
     margin-bottom: 25px;
+    align-items: center;
 }
 
 .add_user button {
@@ -80,6 +81,7 @@
 
 .filtroCard select {
     border: none;
+    background-color: transparent;
 }
 
 .filtroCard:hover {
