--- a/src/screens/marcadores/css/EditarLocacion.module.css
+++ b/src/screens/marcadores/css/EditarLocacion.module.css
@@ -1,108 +1,181 @@
 .container {
     width: 100%;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
     margin: 0 auto;
-    padding: 0;
-    overflow: hidden;
 }
 
-.HeaderFijo {
+.header {
     position: relative;
     width: 100%;
-    margin: 0;
-    padding: 0;
+}
+
+.header img {
+    z-index: 0;
+    width: 100%;
+    height: 40vh;
+    object-fit: cover;
+    filter: brightness(50%);
+}
+
+.VolverAtras {
+    z-index: 1;
+    position: absolute;
+    top: 25px;
+    left: 25px;
+    background-color: transparent;
+    border: none;
+    outline: none;
+    color: white;
+    cursor: pointer;
 }
 
 .Titulo {
     position: absolute;
-    top: 0;
+    top: 25px;
     left: 0;
-    right: 0;
-    color: rgb(255, 255, 255);
-    padding-left: 15px;
-    text-align: center;
-}
-
-.VolverAtras {
-    background-color: transparent;
-    position: absolute;
-    cursor: pointer;
-    padding: 10px;
-    color: white;
-    font-weight: bold;
-    border: none;
-    top: 10px;
-    left: 10px;
-    width: 40px;
-    height: 40px;
-    z-index: 2;
-}
-
-.imagenMarcador {
-    height: 300px;
     width: 100%;
-    object-fit: cover;
-    display: block;
-    margin-top: 0;
-    padding-top: 0;
-    filter: brightness(50%);
+    text-align: center;
+    color: white;
 }
 
 .locacionTitulo {
     position: absolute;
-    top: 0;
-    font-size: 20px;
+    bottom: 45px;
+    left: 25px;
     color: white;
-    padding-left: 25px;
+    font-size: 30px;
 }
 
-.locacionSubtitulo {
-    position: absolute;
-    top: 0;
-    font-size: 19px;
-    color: white;
-    padding-left: 25px;
-}
-
-.formContainer {
-    padding: 20px;
+.Conten {
     width: 100%;
+    padding: 25px;
+    background-color: white;
+    overflow-y: auto;
+    height: 70vh;
+}
+
+.FormContainer {
+    flex-direction: column;
+}
+
+.formGrid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    gap: 10px;
+    margin-bottom: 30px
+}
+
+.formSection {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+}
+
+.formSection label {
+    font-size: 16px;
+    font-weight: 600;
+    margin-bottom: -10px;
+}
+
+.formSection p {
+    font-size: 18px;
+    margin: 0;
+    padding: 5px 0;
+    border-bottom: 1px solid #eaeaea;
+}
+
+.labelSeccion {
+    font-size: 16px !important;
+    color: #555;
+    font-weight: 600;
 }
 
 .inputText {
-    width: 100%;
     height: 30px;
     border-radius: 5px;
     border: 1px solid rgb(165, 165, 165);
     margin-bottom: 10px;
     padding: 0 10px;
+    width: 100%;
     box-sizing: border-box;
 }
 
-.formselect {
+.inputOpt {
+    height: 30px;
+    border-radius: 5px;
+    border: 1px solid rgb(165, 165, 165);
+    margin-bottom: 10px;
+    padding: 0 10px;
     width: 100%;
-    padding: 8px;
-    margin-bottom: 15px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
+    box-sizing: border-box;
 }
 
-.sectionContainer {
-    margin-top: 20px;
-    margin: 5px;
+.ContainerinputTelefono:focus-within {
+    border: 2px solid rgb(240, 151, 36);
 }
 
-.sectionContainer p {
-    font-weight: bold;
-    margin-top: 15px;
+.ContainerinputTelefono {
+    border-radius: 5px;
+    display: flex;
+    align-items: center;
+    width: 100%;
+    border: 1px solid rgb(165, 165, 165);
     margin-bottom: 10px;
 }
 
+.ContainerinputTelefono p {
+    margin: 3px;
+}
+
+.ContainerinputTelefono input {
+    border: none;
+    outline: none;
+    right: 20px;
+    width: 100%;
+    font-weight: 500;
+    font-size: 1rem;
+}
+
+.gridContainer {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    gap: 20px;
+    width: 100%;
+    padding: 20px;
+    border-radius: 10px;
+}
+
+.accesibilidadGrupo {
+    gap: 10px;
+    display: flex;
+    flex-direction: column;
+    font-size: 17px;
+}
+
+.accesibilidadGrupo p {
+    margin: 0;
+    color: #333;
+}
+
+.opt {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+}
+
+.opt label {
+    font-size: 15px;
+    color: #555;
+}
+
 .acciones {
-    margin: 25px auto;
     width: 100%;
     display: flex;
     justify-content: center;
-    padding-top: 50px;
+    gap: 50px;
+    cursor: pointer;
 }
 
 .acciones button {
@@ -114,99 +187,4 @@
     border: none;
     color: white;
     border-radius: 5px;
-    cursor: pointer;
-}
-
-.scrollSeccion {
-    max-height: 300px;
-    height: fit-content;
-    overflow-y: auto;
-}
-
-
-/* Estilos responsivos */
-
-@media (min-width: 767px) {
-    .Titulo {
-        top: 10px;
-        padding: 5px;
-    }
-    .Titulo h2 {
-        font-size: 2rem;
-    }
-    .VolverAtras {
-        top: 10px;
-        left: 10px;
-        width: 40px;
-        height: 40px;
-    }
-    .locacionTitulo {
-        font-size: 1.5rem;
-        padding-top: 270px;
-    }
-    .locacionSubtitulo {
-        font-size: 1.5rem;
-        padding-top: 320px;
-    }
-    .imagenMarcador {
-        height: 300px;
-    }
-    .formGrid {
-        display: grid;
-        grid-template-columns: repeat(5, 1fr);
-        gap: 20px;
-        margin-top: 20px;
-    }
-    .formSection {
-        margin-bottom: 20px;
-    }
-    .imagenMarcador {
-        height: 400px;
-    }
-    .acciones {
-        gap: 10px;
-    }
-    .acciones button {
-        margin-left: 10px;
-    }
-    .locacionTitulo {
-        font-size: 2.5rem;
-    }
-}
-
-@media (max-width: 767px) {
-    .Titulo h2 {
-        font-size: 1.5rem;
-    }
-    .locacionTitulo {
-        font-size: 1.5rem;
-        padding-top: 240px;
-    }
-    .locacionSubtitulo {
-        font-size: 1rem;
-        padding-top: 290px;
-    }
-    .VolverAtras {
-        top: 10px;
-        left: 10px;
-        width: 20px;
-        height: 20px;
-    }
-    .imagenMarcador {
-        height: 350px;
-    }
-    .formGrid {
-        display: flex;
-        flex-direction: column;
-    }
-    .formSection {
-        margin-bottom: 15px;
-    }
-    .acciones {
-        flex-direction: row;
-        justify-content: space-between;
-    }
-    .acciones button {
-        width: 48%;
-    }
 }
