--- a/src/screens/resenas/css/Inspeccionar_Resenas.css
+++ b/src/screens/resenas/css/Inspeccionar_Resenas.css
@@ -1,14 +1,15 @@
-html, body {
+html,
+body {
     margin: 0;
     padding: 0;
     height: 100%;
     overflow: hidden;
 }
+
 .container {
     margin: 0;
     padding: 0;
 }
-
 
 .header {
     background-image: url("https://lh3.googleusercontent.com/gps-cs-s/AB5caB9eZeqiYZh_N6HddUd7JMb6o7pqX4RRnEi7nILjYXDI7kkYSnjc_vaeigx7oH_ya-PravH6AY-cDaK_Whg_xln3BIzCQQYzWkoH6xltRO771yV22JQs9BVH0mIQMcRyRveNe0Sd=w426-h240-k-no");
@@ -29,7 +30,10 @@ html, body {
 .header::before {
     content: "";
     position: absolute;
-    top: 0; left: 0; right: 0; bottom: 0;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
     background: linear-gradient(to top, rgba(0, 0, 0, 0.6), transparent);
     z-index: 1;
     border-radius: 10px;
@@ -42,7 +46,7 @@ html, body {
 
 .icono {
     position: absolute;
-    top: 15px;  
+    top: 15px;
     left: 15px;
     cursor: pointer;
     font-size: 1.2rem;
@@ -50,10 +54,10 @@ html, body {
     transition: transform 0.2s ease;
     z-index: 3;
 }
+
 .icono:hover {
     transform: scale(1.1);
 }
-
 
 .titulo-locacion h1 {
     margin: 0;
@@ -116,6 +120,7 @@ html, body {
     cursor: pointer;
     transition: transform 0.2s ease;
 }
+
 .autor-reseña svg:hover {
     transform: scale(1.2);
 }
@@ -154,7 +159,7 @@ html, body {
     margin: 20px;
     display: flex;
     align-items: center;
-    justify-content: space-between; 
+    justify-content: space-between;
 }
 
 .trash-button:hover {
@@ -167,30 +172,24 @@ html, body {
     color: #ffbf00;
 }
 
-
 @media (max-width: 600px) {
     .header {
         height: 250px;
         padding: 15px;
     }
-
     .titulo-locacion h1 {
         font-size: 1.4rem;
     }
-
     .info-locacion {
         font-size: 1rem;
         flex-direction: column;
         align-items: flex-start;
     }
-
     .texto-reseña {
         font-size: 0.9rem;
     }
-
     .trash-button {
         width: 30px;
         height: 30px;
     }
 }
-
