--- a/src/components/css/VerMarcador.module.css
+++ b/src/components/css/VerMarcador.module.css
@@ -135,3 +135,15 @@
     margin-top: 20px;
 }
 
+.fechaVerMas{
+    background-color: transparent;
+    width: 60%;
+    max-width: 200px;
+    border: 1px solid #818181;
+    color: #6a6a6b;
+}
+
+
+
+
+
