--- a/src/screens/usuarios/css/Perfil_Usuario.module.css
+++ b/src/screens/usuarios/css/Perfil_Usuario.module.css
@@ -1,12 +1,3 @@
-html, body {
-  height: 100%;
-  margin: 0;
-  padding: 0;
-  background-color: #fff;
-  font-family: sans-serif;
-  overflow-x: hidden;
-}
-
 .container {
   display: flex;
   flex-direction: column;
@@ -35,7 +26,7 @@ html, body {
   text-align: center;
 }
 
-.perfil-icono {
+.perfil_icono {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -46,7 +37,7 @@ html, body {
   margin: 20px 0;
 }
 
-.icono-usuario {
+.icono_usuario {
   color: white;
   font-size: 60px;
 }
@@ -57,6 +48,10 @@ html, body {
 
 .campo {
   margin-bottom: 20px;
+  width: 60%;
+  display: flex;
+  flex-direction: column;
+  align-items: left;
 }
 
 .label {
@@ -78,14 +73,24 @@ hr {
   width: 100%;
 }
 
-.btn-editar {
+.perfil_info {
+  width: 100%;
+}
+
+.informacion_campos{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.btn_editar {
   display: flex;
   justify-content: flex-start;
-  width: 100%;
+  width: 50%;
   margin-top: 30px;
 }
 
-.btn-editar button {
+.btn_editar button {
   background-color: #fff;
   color: red;
   border: none;
@@ -93,6 +98,18 @@ hr {
   font-size: 16px;
   cursor: pointer;
 }
+
+.perfil-info {
+  width: 120%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding-left: 20px;
+  box-sizing: border-box;
+}
+
+
+
 
 /* Responsive para móviles */
 @media (max-width: 600px) {
