--- a/src/screens/resenas/css/Inspeccionar_Resenas.module.css
+++ b/src/screens/resenas/css/Inspeccionar_Resenas.module.css
@@ -51,12 +51,14 @@
   z-index: 2;
 }
 
-.icono {
+.botonatras {
   position: absolute;
   top: 20px;
   left: 20px;
   font-size: 1.5rem;
+  background-color: transparent;
   color: white;
+  border: none;
   cursor: pointer;
   z-index: 3;
 }
