--- a/src/screens/usuarios/css/Formularios.module.css
+++ b/src/screens/usuarios/css/Formularios.module.css
@@ -20,14 +20,16 @@
   border-radius: 10px; 
 }
 
-.flecha {
+.botonatras {
   position: fixed;
   top: 20px;
   left: 20px;
   color: #000;
   cursor: pointer;
   z-index: 1000;
-  font-size: 20px;
+  font-size: 25px;
+  background-color: transparent;
+  border: none;
 }
 
 .titulo h1 {
