--- a/src/components/css/VerMarcador.module.css
+++ b/src/components/css/VerMarcador.module.css
@@ -139,8 +139,8 @@
     background-color: transparent;
     width: 60%;
     max-width: 200px;
-    border: 1px solid #818181;
     color: #6a6a6b;
+    border: none;
 }
 
 .tercerdia {
