--- a/src/screens/usuarios/css/Gestion_Usuarios.module.css
+++ b/src/screens/usuarios/css/Gestion_Usuarios.module.css
@@ -43,7 +43,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-} 
+}
 
 .filtros .buscar {
     display: flex;
@@ -53,8 +53,8 @@
 .filtros .buscar form {
     display: flex;
     gap: 5px;
-    
-    
+
+
 }
 
 .filtros .buscar input {
@@ -63,7 +63,7 @@
     border: 1px solid gray;
 }
 
-.filtros .buscar  button {
+.filtros .buscar button {
     background-color: transparent;
     border: none;
     outline: none;
@@ -119,7 +119,14 @@
     align-items: center;
     justify-content: center;
     border-radius: 50%;
+    overflow: hidden;
 
+
+}
+
+.estado .imgEstado {
+    width: 100%;
+    height: 100%;
 }
 
 .card .opciones button {
