--- a/src/screens/usuarios/css/Perfil_Usuario.module.css
+++ b/src/screens/usuarios/css/Perfil_Usuario.module.css
@@ -63,7 +63,7 @@
 
 .valor {
   color: #333;
-  font-size: 15px;
+  font-size: 16px;
   margin-top: 5px;
 }
 
@@ -84,21 +84,15 @@ hr {
   align-items: center;
 }
 
-.btn_editar {
+.contenedor_botones_perfil {
   display: flex;
-  justify-content: flex-start;
-  width: 50%;
-  margin-top: 30px;
+  justify-content: center;
+  align-items: center;
+  gap: 15px;
+  margin-top: 15px;
 }
 
-.btn_editar button {
-  background-color: #fff;
-  color: red;
-  border: none;
-  padding: 10px 20px;
-  font-size: 16px;
-  cursor: pointer;
-}
+
 
 .perfil-info {
   width: 120%;
@@ -109,7 +103,92 @@ hr {
   box-sizing: border-box;
 }
 
+.reseñas_usuario {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 20px;
+}
 
+.reseñas_usuario button {
+  background-color: #fff;
+  border: solid 2px #0397fc;
+  border-radius: 10px;
+  width: 110px;
+  cursor: pointer;
+}
+
+.informacion_campos_de_resena{
+  display: flex;
+  align-items: flex-start;
+  flex-direction: column;
+  width: 100%;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  padding: 15px;
+  margin-bottom: 20px;
+  box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+}
+
+.campo {
+  margin-bottom: 20px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.calificacion_fecha_reseña {
+  display: flex;
+  gap: 5px;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+.informacion_campos_de_resena label {
+  border-bottom: solid 1px #000; 
+}
+
+.texto_reseña {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  font-size: 15px;
+  line-height: 1.5;
+  color: #333;
+}
+
+.texto_reseña span {
+  font-size: 15px;
+  font-weight: 300;
+  margin: 5px 0 5px 2px;
+  padding-top: 5px ;
+}
+
+.texto_reseña label {
+  font-size: 17px;
+  color: #000;
+}
+
+
+.estrella {
+  color: #ffcc00;
+  font-size: 20px;
+  margin-right: 3px;
+}
+
+.boton_editar, .boton_desactivar {
+  background-color: #fff;
+  color: red;
+  padding: 10px;
+  font-size: 16px;
+  cursor: pointer;
+  border: none;
+  width: 210px;
+  text-align: center;
+}
 
 
 /* Responsive para móviles */
@@ -128,10 +207,17 @@ hr {
   }
 
   .label, .valor {
-    font-size: 14px;
+    font-size: 16px;
   }
 
   .btn-editar {
     justify-content: center;
   }
 }
+
+.sin_resenas {
+  text-align: center;
+  
+  font-size: 20px;
+}
+
