--- a/src/components/Footer/css/TrazadoRuta.module.css
+++ b/src/components/Footer/css/TrazadoRuta.module.css
@@ -68,16 +68,23 @@
     border: none;
 }
 
-.hr {
+.Lineahr {
     border: 0;
-    border-top: 1px solid rgb(200, 197, 197);
-    margin: 10px 0;
+    border-top: 1px solid rgb(202, 191, 191);
+    margin: 10px auto;
 }
 
 .TituloDestin {
-    color: gray;
+    color: rgb(130, 127, 127);
     text-align: center;
     font: 100% sans-serif;
+}
+
+.MensajeP {
+    font-size: 15px;
+    text-align: center;
+    margin-top: 12px;
+    color: rgb(34, 33, 33);
 }
 
 .ContenInfo {
