--- a/src/components/css/Buscador.module.css
+++ b/src/components/css/Buscador.module.css
@@ -1,10 +1,6 @@
 .container {
     align-items: center;
-    position: absolute;
-    top: 25px;
-    z-index: 1;
-    left: 25px;
-    z-index: 2;
+    position: relative;
 }
 
 .distribucionContainer {
