--- a/src/screens/solicitudes/List.module.css
+++ b/src/screens/solicitudes/List.module.css
@@ -1,17 +1,10 @@
-* {
-    padding: 0;
-    margin: 0;
-}
-
 .container {
     position: relative;
     width: 100%;
-
     background-color: white;
     display: flex;
     flex-direction: column;
     color: black;
-
 }
 
 .header {
@@ -52,7 +45,6 @@
     background-color: transparent;
     border: none;
     outline: none;
-
 }
 
 .filtroCard {
@@ -66,7 +58,7 @@
     background-color: transparent;
 }
 
-.filtroCard  select {
+.filtroCard select {
     border: none;
     outline: none;
     background-color: transparent;
@@ -86,7 +78,6 @@
     width: auto;
     border-bottom: 1px solid rgb(209, 209, 209);
     width: fit-content;
-
 }
 
 .cardContent p {
@@ -95,7 +86,6 @@
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
-
 }
 
 .card .estado {
@@ -105,7 +95,6 @@
     align-items: center;
     justify-content: center;
     border-radius: 50%;
-
 }
 
 .card .opciones button {
@@ -119,8 +108,6 @@
     flex-direction: row;
     gap: 5px;
     color: rgb(1, 1, 158);
-
-
 }
 
 .card .opciones button:hover {
@@ -130,12 +117,18 @@
 
 .cardContent p {
     font-size: 1rem;
+}
 
+.SubTitulo {
+    text-align: center;
+    color: gray;
+    justify-items: center;
 }
 
 .content {
     display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
+    justify-content: start;
+    flex-wrap: wrap;
+    padding: 25px;
+    gap: 10px;
 }
