--- a/src/screens/usuarios/css/Perfil_Usuario.module.css
+++ b/src/screens/usuarios/css/Perfil_Usuario.module.css
@@ -6,6 +6,7 @@
   box-sizing: border-box;
   max-width: 600px;
   margin: 0 auto;
+  width: 100%;
 }
 
 .botonatras {
@@ -49,10 +50,10 @@
 
 .campo {
   margin-bottom: 20px;
-  width: 60%;
+  width: 100%;
   display: flex;
   flex-direction: column;
-  align-items: left;
+  align-items: flex-start;
 }
 
 .label {
@@ -65,9 +66,11 @@
   color: #333;
   font-size: 16px;
   margin-top: 5px;
+  width: 100%;
+  word-break: break-word;
 }
 
-hr {
+.campo hr {
   border: 0;
   border-top: 1px solid #ccc;
   margin: 10px 0;
@@ -76,12 +79,16 @@ hr {
 
 .perfil_info {
   width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
 }
 
-.informacion_campos{
+.informacion_campos {
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 100%;
 }
 
 .contenedor_botones_perfil {
@@ -90,35 +97,26 @@ hr {
   align-items: center;
   gap: 15px;
   margin-top: 15px;
-}
-
-
-
-.perfil-info {
-  width: 120%;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  padding-left: 20px;
-  box-sizing: border-box;
+  flex-wrap: wrap;
+  width: 100%;
 }
 
 .reseñas_usuario {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
+  width: 100%;
 }
 
 .reseñas_usuario button {
   background-color: #fff;
-  border: solid 2px #0397fc;
-  border-radius: 10px;
-  width: 110px;
+  border: none;
+  width: 100px;
   cursor: pointer;
 }
 
-.informacion_campos_de_resena{
+.informacion_campos_de_resena {
   display: flex;
   align-items: flex-start;
   flex-direction: column;
@@ -131,14 +129,6 @@ hr {
   overflow: hidden;
 }
 
-.campo {
-  margin-bottom: 20px;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-}
-
 .calificacion_fecha_reseña {
   display: flex;
   gap: 5px;
@@ -147,7 +137,7 @@ hr {
 }
 
 .informacion_campos_de_resena label {
-  border-bottom: solid 1px #000; 
+  border-bottom: solid 1px #000;
 }
 
 .texto_reseña {
@@ -158,13 +148,15 @@ hr {
   font-size: 15px;
   line-height: 1.5;
   color: #333;
+  width: 100%;
 }
 
 .texto_reseña span {
   font-size: 15px;
   font-weight: 300;
   margin: 5px 0 5px 2px;
-  padding-top: 5px ;
+  padding-top: 5px;
+  width: 100%;
 }
 
 .texto_reseña label {
@@ -172,14 +164,14 @@ hr {
   color: #000;
 }
 
-
 .estrella {
   color: #ffcc00;
   font-size: 20px;
   margin-right: 3px;
 }
 
-.boton_editar, .boton_desactivar {
+.boton_editar,
+.boton_desactivar {
   background-color: #fff;
   color: red;
   padding: 10px;
@@ -190,15 +182,32 @@ hr {
   text-align: center;
 }
 
+.separador_botones {
+  width: 100%;
+  border: 0;
+  border-top: 1px solid #ccc;
+  margin: 0 0 20px 0;
+}
+
+.nombre_usuario {
+  width: 100%;
+  text-align: center;
+}
+
+.sin_resenas {
+  text-align: center;
+  font-size: 20px;
+  width: 100%;
+}
 
 /* Responsive para móviles */
 @media (max-width: 600px) {
-  .perfil-icono {
+  .perfil_icono {
     width: 100px;
     height: 100px;
   }
 
-  .icono-usuario {
+  .icono_usuario {
     font-size: 50px;
   }
 
@@ -206,18 +215,34 @@ hr {
     font-size: 20px;
   }
 
-  .label, .valor {
-    font-size: 16px;
+  .label,
+  .valor {
+    font-size: 14px;
   }
 
-  .btn-editar {
-    justify-content: center;
+  .reseñas_usuario {
+    flex-direction: row;
+    justify-content: space-between;
+  }
+
+  .reseñas_usuario button {
+    width: 48%;
+    font-size: 14px;
+    padding: 8px 0;
+  }
+
+  .boton_editar,
+  .boton_desactivar {
+    width: 100%;
+    margin: 5px 0;
+  }
+
+  .contenedor_botones_perfil {
+    flex-direction: column;
+    width: 100%;
+  }
+
+  .informacion_campos_de_resena {
+    padding: 10px;
   }
 }
-
-.sin_resenas {
-  text-align: center;
-  
-  font-size: 20px;
-}
-
