--- a/src/screens/solicitudes/Ver.module.css
+++ b/src/screens/solicitudes/Ver.module.css
@@ -3,14 +3,14 @@
     width: fit-content;
 }
 
-h4 {
+.infoContainer h4 {
     font-size: 1rem;
     margin-top: 10px;
     margin-bottom: 5px;
     font-weight: 500;
 }
 
-ul {
+.infoContainer ul {
     margin-left: 30px;
 }
 
