--- a/src/screens/accesibilidades/css/List.module.css
+++ b/src/screens/accesibilidades/css/List.module.css
@@ -88,15 +88,22 @@
     background-color: white;
     gap: 30px;
     width: auto;
-    border-bottom: 1px solid rgb(209, 209, 209);
     width: fit-content;
+    border: 1px solid rgba(128, 128, 128, 0.075);
+    transition: 0.2s all;
+    border-radius: 15px;
+    box-shadow: 0px 0px 5px 0px rgba(128, 128, 128, 0.562);
+}
+
+.card:hover {
+    transform: scale(98%);
+    box-shadow: 0px 0px 10px 0px rgba(128, 128, 128, 0.562);
+
 }
 
 .cardContent p {
     width: 200px;
     text-align: left;
-    white-space: nowrap;
-    overflow: hidden;
     text-overflow: ellipsis;
 }
 
@@ -147,4 +154,14 @@
     flex-wrap: wrap;
     padding: 25px;
     gap: 10px;
+    width: 90%;
+    margin: 0 auto;
+}
+
+
+@media (max-width: 768px) {
+    .content {
+        justify-content: center;
+        flex-wrap: wrap;
+    }
 }
