--- a/src/screens/marcadores/css/List.module.css
+++ b/src/screens/marcadores/css/List.module.css
@@ -90,8 +90,19 @@
     align-items: center;
     background-color: white;
     gap: 30px;
-    border-bottom: 1px solid rgb(209, 209, 209);
+    width: auto;
     width: fit-content;
+    border: 1px solid rgba(128, 128, 128, 0.075);
+    border-radius: 15px;
+    box-shadow: 0px 0px 5px 0px rgba(128, 128, 128, 0.562);
+    transition: 0.2s all;
+
+}
+
+.card:hover {
+    transform: scale(98%);
+    box-shadow: 0px 0px 10px 0px rgba(128, 128, 128, 0.562);
+
 }
 
 .cardContent p {
@@ -137,4 +148,14 @@
     flex-wrap: wrap;
     padding: 25px;
     gap: 10px;
+    width: 90%;
+    margin: 0 auto;
+}
+
+
+@media (max-width: 768px) {
+    .content {
+        justify-content: center;
+        flex-wrap: wrap;
+    }
 }
