--- a/src/screens/resenas/css/Gestion_Resenas.module.css
+++ b/src/screens/resenas/css/Gestion_Resenas.module.css
@@ -94,6 +94,9 @@
     flex-wrap: wrap;
     padding: 25px;
     gap: 10px;
+    width: 90%;
+    margin: 0 auto;
+
 }
 
 .card {
@@ -104,8 +107,18 @@
     background-color: white;
     gap: 30px;
     width: auto;
-    border-bottom: 1px solid rgb(209, 209, 209);
     width: fit-content;
+    border: 1px solid rgba(128, 128, 128, 0.075);
+    border-radius: 15px;
+    box-shadow: 0px 0px 5px 0px rgba(128, 128, 128, 0.562);
+    transition: 0.2s all;
+
+}
+
+.card:hover {
+    transform: scale(98%);
+    box-shadow: 0px 0px 10px 0px rgba(128, 128, 128, 0.562);
+
 }
 
 .card .estado {
@@ -144,4 +157,11 @@
 
 .cardContent p {
     font-size: 1rem;
+}
+
+@media (max-width: 768px) {
+    .content {
+        justify-content: center;
+        flex-wrap: wrap;
+    }
 }
