--- a/src/screens/solicitudes/List.module.css
+++ b/src/screens/solicitudes/List.module.css
@@ -76,8 +76,17 @@
     background-color: white;
     gap: 30px;
     width: auto;
-    border-bottom: 1px solid rgb(209, 209, 209);
     width: fit-content;
+    border: 1px solid rgba(128, 128, 128, 0.075);
+    border-radius: 15px;
+    box-shadow: 0px 0px 5px 0px rgba(128, 128, 128, 0.562);
+}
+
+.card:hover {
+    transform: scale(98%);
+    transition: 0.2s all;
+    box-shadow: 0px 0px 10px 0px rgba(128, 128, 128, 0.562);
+
 }
 
 .cardContent p {
@@ -131,4 +140,13 @@
     flex-wrap: wrap;
     padding: 25px;
     gap: 10px;
+    margin: auto;
+    width: 90%;
+}
+
+@media (max-width: 768px) {
+    .content {
+        justify-content: center;
+        flex-wrap: wrap;
+    }
 }
