correcion de info/edit marcadores. se cortaba la informacion

--- a/src/screens/marcadores/css/InfoDetallada.module.css
+++ b/src/screens/marcadores/css/InfoDetallada.module.css
@@ -51,7 +51,8 @@
     padding: 25px;
     background-color: white;
     overflow-y: auto;
-    height: 70vh;
+    height: fit-content;
+
 }
 
 .FormContainer {
