Modo Nocturno Implementado en Vista principal

--- a/src/components/Footer/css/Footer.module.css
+++ b/src/components/Footer/css/Footer.module.css
@@ -62,3 +62,19 @@
     overflow: hidden;
     height: 450px;
 }
+
+.ContenPrin.darkMode {
+    background-color: #2d2d2d;
+    color: white;
+}
+
+.PanelInfo.darkMode {
+    background-color: #2d2d2d;
+    color: white;
+}
+
+.Button {
+    /* tus estilos existentes */
+    transition: all 0.3s ease;
+}
+
