--- a/src/screens/marcadores/css/AgregarMarcador.module.css
+++ b/src/screens/marcadores/css/AgregarMarcador.module.css
@@ -22,7 +22,7 @@
     background: linear-gradient(90deg, rgba(253, 29, 29, 1) 0%, rgba(255, 106, 60, 1) 100%);
     font-size: 0.8rem;
     font-weight: 500;
-    text-transform: uppercase;
+    text-transform: capitalize;
     border: none;
     color: white;
     border-radius: 5px;
@@ -56,7 +56,6 @@ form p {
 form .labelSeccion {
     font-weight: 500;
     padding: 5px;
-
 }
 
 .sectionContainer {
