--- a/src/screens/marcadores/css/EditarLocacion.module.css
+++ b/src/screens/marcadores/css/EditarLocacion.module.css
@@ -184,7 +184,7 @@
     background: rgb(253, 29, 29);
     font-size: 0.8rem;
     font-weight: 500;
-    text-transform: uppercase;
+    text-transform: capitalize;
     border: none;
     color: white;
     border-radius: 5px;
