--- a/src/screens/tipoRecinto/css/Agregar.module.css
+++ b/src/screens/tipoRecinto/css/Agregar.module.css
@@ -1,5 +1,6 @@
 .titulo {
     width: 100%;
+    margin-top: 20px;
 }
 
 .container {
@@ -22,7 +23,6 @@
     background: linear-gradient(90deg, rgba(253, 29, 29, 1) 0%, rgba(255, 106, 60, 1) 100%);
     font-size: 0.8rem;
     font-weight: 500;
-    text-transform: uppercase;
     border: none;
     color: white;
     border-radius: 5px;
@@ -46,8 +46,9 @@
     padding: 5px;
 }
 
- .labelSeccion {
+.labelSeccion {
     font-weight: 400;
+    padding-bottom: 5px;
 }
 
 .inpSelect {
@@ -55,5 +56,4 @@
     margin-bottom: 10px;
     border: 1px solid rgb(165, 165, 165);
     padding: 5px;
-
 }
