se limitaron los resultados de busquedas recientes y el height del contenedor de indicaciones

--- a/src/components/Footer/css/Footer.module.css
+++ b/src/components/Footer/css/Footer.module.css
@@ -60,7 +60,7 @@
     left: 0px;
     background-color: white;
     overflow: hidden;
-    height: 450px;
+    height: 450px !important;
 }
 
 .ContenPrin.darkMode {
